--- a/ct-solid/package.json
+++ b/ct-solid/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "npx playwright test"
   },
   "license": "MIT",
   "dependencies": {
