--- a/playwright-ct-solid/package.json
+++ b/playwright-ct-solid/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "13.0.1",
+    "@semantic-release/exec": "7.1.0",
     "@semantic-release/github": "11.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/release-notes-generator": "14.0.3",
